Update index.html and styles.css with new gradient backgrounds

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <body>
     <header class="hero">
       <div class="hero__content">
-        <span class="hero__tag">المجلس العلمي الأعلى · الفقه المالكي</span>
+        <span class="hero__tag">وفق المجلس العلمي الأعلى · الفقه المالكي   </span>
         <h1>زكاة الأجور والرواتب في المغرب</h1>
         <p>
-          خلاصة مركّزة لحوار فقهي موسّع حول زكاة الدخل، النصاب المعتمد، أمثلة
+          خلاصة حول زكاة الدخل، النصاب المعتمد، أمثلة
           حسابية واقعية، وجدول هجري للأوقات الفاضلة للزكاة والصدقات. المحتوى
           مستند إلى فتاوى رسمية واجتهادات معاصرة تراعي الواقع المغربي.
         </p>
@@ -249,7 +249,7 @@
             <h3>شعبان</h3>
             <p>تصفية الحسابات السنوية والتحضير لزكاة رمضان.</p>
           </article>
-          <article class="timeline__highlight">
+          <article style="background: linear-gradient(135deg, rgba(146, 235, 37, 0.85), rgba(56, 189, 248, 0.85));">
             <h3>رمضان</h3>
             <p>
               ذروة العطاء. إخراج الزكاة والصدقات، دعم برامج الإفطار والقوافل
@@ -264,7 +264,7 @@
             <h3>ذو القعدة</h3>
             <p>مراجعة الرصيد قبل إتمام الحول. دعم الحجاج المحتاجين.</p>
           </article>
-          <article class="timeline__highlight">
+          <article style="background: linear-gradient(135deg, rgba(37, 235, 119, 0.85), rgba(56, 189, 248, 0.85));">
             <h3>ذو الحجة</h3>
             <p>
               العشر الأوائل: أفضل أيام العمل الصالح. الزكاة والصدقات تتضاعف
@@ -297,9 +297,9 @@
               عليك وكانوا فقراء. تجمع بين الزكاة وصلة الرحم.
             </p>
           </article>
-          <article class="card">
+          <article class="card" style="background: linear-gradient(135deg, rgba(255, 255, 255, 0.85), rgba(40, 40, 40, 0.85));">
             <h3>أفضلية السر</h3>
-            <p>
+            <p style="color: #ffffff;">
               صدقة السر تطفئ غضب الرب، إلا إذا أظهرها شجع غيرك على الإنفاق أو
               رفع حرج المحتاج.
             </p>
@@ -379,7 +379,7 @@
     <footer class="footer">
       <div>
         <p>
-          أُعدّت هذه الصفحة بناءً على نقاش تفصيلي مع مستشار افتراضي، مع مراعاة
+          أُعدّت هذه الصفحة  مع مراعاة
           الاجتهاد المالكي والفتاوى الرسمية في المغرب.
         </p>
         <p class="footer__note">
