update of index content

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="section__header">
           <h2>أركان الفتوى المعتمدة</h2>
           <p>
-            خلاصة ما استقر عليه الحوار مع الإحالة إلى الفقه المالكي والواقع
+            خلاصة  مع الإحالة إلى الفقه المالكي والواقع
             الاقتصادي في المغرب.
           </p>
         </div>
@@ -89,7 +89,7 @@
         <div class="section__header">
           <h2>دراسات حالة واقعية</h2>
           <p>
-            السيناريوهات مستخلصة من الحوار: أجير براتب 7,000 د.م مع ادخار
+             أجير براتب 7,000 د.م مع ادخار
             متدرج، وكيفية حساب الزكاة أو التريث حتى بلوغ النصاب.
           </p>
         </div>
