Add habous prayer times section to index.html

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             <li><a href="#regional-nisab">الدول المغاربية</a></li>
             <li><a href="#calculator">حاسبة الزكاة</a></li>
             <li><a href="#usd-calculator">حاسبة الدولار</a></li>
+            <li><a href="#prayer-times">مواقيت الصلاة</a></li>
             <li><a href="#faq">الأسئلة الشائعة</a></li>
             <li><a href="#sources">المراجع</a></li>
           </ul>
@@ -645,6 +646,30 @@
             </p>
           </article>
         </div>
+      </section>
+
+      <section class="section section--alt" id="prayer-times">
+        <div class="section__header">
+          <h2>مواقيت الصلاة الرسمية في المغرب</h2>
+          <p>
+            اطّلع على مواقيت الصلاة اليومية مباشرة من بوابة وزارة الأوقاف
+            والشؤون الإسلامية، ونسّق مواعيد إخراج الزكاة والصدقات مع الأوقات ذات
+            الفضل. في حال عدم تحميل الإطار، استخدم الرابط المباشر أدناه.
+          </p>
+        </div>
+        <div class="embed-wrapper">
+          <iframe
+            src="https://www.habous.gov.ma/prieres/"
+            title="مواقيت الصلاة من وزارة الأوقاف المغربية"
+            loading="lazy"
+            referrerpolicy="no-referrer"
+          ></iframe>
+        </div>
+        <p class="embed-fallback">
+          <a href="https://www.habous.gov.ma/prieres/" target="_blank" rel="noopener"
+            >فتح مواقيت الصلاة في بوابة وزارة الأوقاف المغربية</a
+          >
+        </p>
       </section>
 
       <section class="section section--alt" id="family">
